[package]
name = "helpers"
description = "self use helper library"
version = "0.2.1"
edition = "2021"
authors = ["ush2a"]
license = "MIT"
readme = "README.md"

[dependencies]
rand = "=0.8.5"
jsonwebtoken = "=9.3.0"
serde = { version = "=1.0.204", features = ["derive"] }
serde_json = "=1.0.115"
rust-argon2 = "=2.1.0"
chrono = "=0.4.37"
nanoid = "=0.4.0"

[features]
default = []
rand = []
jwt = []
hash = []
uuid = []
time = []

[package.metadata.docs.rs]
all-features = true
