[package]
name = "helpers"
description = "self use helper library"
version = "0.3.0"
edition = "2021"
authors = ["ush2a"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JQiue/helpers"
repository = "https://github.com/JQiue/helpers.git"
documentation = "https://docs.rs/helpers/latest/helpers/"

[dependencies]
rand = "=0.8.5"
jsonwebtoken = "=9.3.0"
serde = { version = "=1.0.204", features = ["derive"] }
serde_json = "=1.0.115"
rust-argon2 = "=2.1.0"
chrono = "=0.4.37"
nanoid = "=0.4.0"
bcrypt = "=0.15.1"
md5 = "=0.7.0"

[features]
default = []
rand = []
jwt = []
hash = []
uuid = []
time = []

[package.metadata.docs.rs]
all-features = true
